# react_investiment_research

./: .env.example  .gitignore  PREMIUM_TOOLS.md  README.md  SYSTEM_PROMPT.md  TODO.md  pyproject.toml  requirements.txt  start_prompt.md
docs/: API_SPEC.md  ARCHITECTURE.md  CONVENTIONS.md  COST_ANALYSIS.md  ENV.md  OPTIMIZATION_STRATEGIES.md  PRD.md  TASKS.md  TEST_PLAN.md
docs/archive/: COST_IMPLEMENTATION.md  INTEGRATION_TEST_REPORT.md  SENTIMENT_ANALYSIS.md
react_investment_research/: __init__.py  agent.py  cli.py  cost_analyzer.py  cost_analyzer_cli.py  eval.py  llm.py  mocks.py  schemas.py
react_investment_research/data/mocks/: fundamentals_events_AAPL.json  fundamentals_events_GLD.json  fundamentals_events_MSFT.json  fundamentals_events_QQQ.json  fundamentals_events_SPY.json  fundamentals_events_TLT.json  market_snapshot_AAPL_3mo.json  market_snapshot_GLD_3mo.json  market_snapshot_MSFT_3mo.json  market_snapshot_QQQ_3mo.json  market_snapshot_SPY_3mo.json  market_snapshot_TLT_3mo.json
react_investment_research/tools/: __init__.py  fundamentals_events.py  market_snapshot.py  providers.py  registry.py  sentiment_analysis.py
scripts/: simulate_user.py
tests/: conftest.py  test_agent.py  test_cli.py  test_cost_analyzer.py  test_eval.py  test_fundamentals_events.py  test_integration_llm.py  test_llm.py  test_market_snapshot.py  test_market_snapshot_advanced.py  test_paid_tools.py  test_providers.py  test_registry.py  test_sentiment_analysis.py  test_tool_routing.py
